<resources>

    <!-- Testing -->
    <string name="test_user">david</string>
    <string name="test_password">password</string>
    <string name="test_chat_url">https://bhub.mybluemix.net/chat/new/dale</string>

    <!-- Login Screen -->
    <string name="join">Join</string>
    <string name="pay">Pay</string>
    <string name="button_login">Login</string>
    <string name="button_make_account">Need an account?</string>
    <string name="user_hint">username</string>
    <string name="password_hint">password</string>
    <string name="citi_logo_desc">Citi Bank Logo</string>

    <!-- Citi Account Screen -->
    <string name="citi_title">Your Account Information</string>
    <string name="citi_name"><u>Account Name:</u></string>
    <string name="citi_number"><u>Account Number:</u></string>
    <string name="citi_acc_holder"><u>Account Holder:</u></string>
    <string name="citi_balance"><u>Balance:</u></string>
    <string name="citi_default_name">Account Name Here</string>
    <string name="citi_default_number">XXXX-XXXXXX-XXXXX</string>
    <string name="citi_default_acc_holder">Accountington Holderson</string>
    <string name="citi_default_balance">$ XXXXX.XX</string>
    <string name="citi_fallback_name">No Name Found</string>
    <string name="citi_fallback_number">No Number Found</string>
    <string name="citi_fallback_holder">No Holder Found</string>
    <string name="citi_fallback_balance">No Balance Found</string>

    <!-- Main Landing Screen -->
    <string name="button_enter">Enter</string>
    <string name="button_accounts">My Accounts</string>
    <string name="button_logout">Logout</string>
    <string name="button_points">My Points</string>
    <string name="button_picture">Profile Picture</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="signup_link_placeholder">Sign up? <u>link goes here!</u></string>
    <string name="signup_link">Don\'t have a citi account? <a href='http://citi-online-banking.mybluemix.net/'>Sign Up Here</a></string>

    <!-- Transaction History Screen -->
    <string name="trans_approved">Approved</string>
    <string name="trans_denied">Denied</string>
    <string name="trans_pending">Pending</string>
    <string name="trans_dialog_title">Approve the transaction?</string>
    <string name="trans_dialog_msg">Sending money to %s.</string>
    <string name="trans_date_placeholder">Oct 1, 2055 at 8:23</string>

    <!-- Profile Picture Screen -->
    <string name="profile_choose_button">Choose Picture</string>
    <string name="profile_upload_button">Upload Picture</string>
    <string name="profile_take_photo">Take Photo</string>
    <string name="profile_choose_photo">Choose from Gallery</string>
    <string name="profile_dialog_title">Profile Picture Options</string>
    <string name="profile_pic_desc">Large profile picture</string>
    <string name="profile_pic_thumb_desc">profile picture thumbnail</string>

    <!-- Push Message Related -->
    <string name="push_msg_placeholder">Message goes here</string>
    <string name="push_msg_positive">Approve</string>
    <string name="push_msg_negative">Deny</string>
    <string name="push_msg_cancel">Dismiss</string>

    <!-- Misc. Values -->
    <string name="app_name">JoinPay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_radar_view">RadarViewActivity</string>
    <string name="title_contact_list">ContactViewActivity</string>
    <string name="title_send_confirm">SendConfirmActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_send">Send</string>
    <string name="tab_request">Request</string>
    <string name="tab_history">History</string>
    <string name="tab_chat">Chat</string>
    <string name="service_name">MsgRtrService</string>
    <string name="cancel">Cancel</string>

</resources>