<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.soontobe.joinpay.PictureActivity"
    android:background="@drawable/shape_main_background">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileBigImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_layout"
        android:contentDescription="@string/profile_pic_desc"
        android:contextClickable="false"
        android:src="@drawable/profile_placeholder"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <FrameLayout
            android:layout_width="@dimen/landing_button_width"
            android:layout_height="@dimen/landing_button_height"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/profile_choose_button"
                android:id="@+id/button_profile_select"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/selector_button"
                style="@style/ButtonTheme"
                android:onClick="onChoosePicture" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="@dimen/landing_button_width"
            android:layout_height="@dimen/landing_button_height"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/profile_upload_button"
                android:id="@+id/button_profile_upload"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/selector_button"
                style="@style/ButtonTheme"
                android:onClick="onUploadPicture"
                android:enabled="false" />
        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileThumbView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/profileBigImageView"
        android:contentDescription="@string/profile_pic_thumb_desc"
        android:src="@drawable/profile_placeholder"
        android:scaleType="centerInside"
        android:layout_alignLeft="@+id/profileBigImageView"
        android:layout_toLeftOf="@+id/button_layout" />
</RelativeLayout>
